@@ -1,3 +1,6 @@
+27/09/2020
+-   Fix space stations prices not refreshing after prestige
+
 26/09/2020
 -   Challenges
 -   More cards
